--- a/gallery.html
+++ b/gallery.html
@@ -91,13 +91,13 @@
             <div id="my_slider" class="carousel slide" data-ride="carousel">
                <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="d-block w-100" src="images/our-img-1.png" alt="First slide">
+                  <img class="d-block w-100" src="images/rayan_cherki.webp" alt="First slide">
                </div>
                <div class="carousel-item">
-                  <img class="d-block w-100" src="images/our-img-1.png" alt="Second slide">
+                  <img class="d-block w-100" src="images/bradley_barcola.jpg" alt="Second slide">
                </div>
                <div class="carousel-item">
-                 <img class="d-block w-100" src="images/our-img-1.png" alt="Third slide">
+                 <img class="d-block w-100" src="images/momo_elarouch.png" alt="Third slide">
                </div>
             </div>
                <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
