--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                 <div class="col-sm-2">
                         
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-12">
                     <div class="col-sm-8">
                         <div class="form-group">
                             <label for="exampleFormControlTextarea1" style="color: #fff">Clément est-il gay ?</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="1">Si tu réponds non c'est que tu es gay</textarea>
                         </div>
                     </div>
                     <div class="col-sm-2">
