add first connection to api

--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
                 <div id="clubs">
                     <h2>Clubs joués</h2>
                 </div>       
-                <div id="clublist">
-                    <p>Club 1
-                    <p>Club 2
-                    <p>Club 3
-                </div>   
+                <div id="clublist"></div>   
                 <div id="playername">
                     <div id="who">
                         <h2>Qui suis-je ?</h2>
@@ -53,8 +49,9 @@
                 </div>
                 <div id="submitbutton">
                     <div>
-                        <input type="submit" value="Soumettre" onclick="BackToMenu()">
+                        <input type="submit" value="Soumettre" onclick="TryPlayerButton()">
                     </div>
+                    <div id="result"></div>
                 </div>
             </div>
         </div> 
@@ -86,7 +83,6 @@
         </div>
     </div>
             
-
 </body>
 
 </html>
