--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
             <div id="heart-points">
                 <p>Vies restantes : <br><span id="life">3</span></p>
             </div>
-            <div id="submitbutton">
-                <div>
-                    <input type="submit" value="Soumettre" onclick="TryPlayerButton()">
-                </div>
-            </div>
             <div id="result"></div>
+            <div id="submitbutton">
+                <button onclick="TryPlayerButton()">Soumettre</button>
+            </div>
             <div id="replay"></div>
         </div> 
         <div id="PageRegles" style="display:none">
@@ -61,11 +59,7 @@
             <div id="texteregles">
                 <p>Ce jeu est basé sur vos connaissances footballistiques actuelles.<br>Trois clubs se présentent à vous, vous devrez tout simplement deviner le joueur ayant joué pour ces trois clubs.<br>Attention, seuls les joueurs encore en activité comptent.<br>Une fois que vous pensez avoir trouvé le joueur, cliquez sur le bouton " <span style="font-style:italic; font-weight: bold; color: red;">Soumettre</span> "</p>
             </div>
-            <div id="submitbutton">
-                <div>
-                    <button id="rules" onclick="BackToMenu()">Menu Principal</button>
-                </div>
-            </div>
+            <button id="rules" onclick="BackToMenu()">Menu Principal</button>
         </div>
         <div id="PageAPropos" style="display:none">
             <div id="APropos">
@@ -74,11 +68,7 @@
             <div id="texteapropos">
                 <p>Trois potes fans de foot jouaient à ce jeu sur la route de leur vacances pour passer le temps. La volonté était de partager aux plus fous de foot ce jeu original et qui vous fait travailler vos connaissances foot.<br>Pourquoi avoir choisi Sellaci comme nom ? A vous de le deviner...</p>
             </div>
-            <div id="submitbutton">
-                <div>
-                    <button id="aboutus" onclick="BackToMenu()">Menu Principal</button>
-                </div>
-            </div>
+            <button id="aboutus" onclick="BackToMenu()">Menu Principal</button>
         </div>
     </div>
             
