Playername if lost

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <div id="heart-points">
                 <p>Vies restantes : <br><span id="life">3</span></p>
             </div>
+            <div id="showiflose" style="display:none">
+            </div>
             <div id="result"></div>
             <div id="submitbutton">
                 <button onclick="TryPlayerButton()">Soumettre</button>
