--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="jquery.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Baloo+2' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 <body>
     <div id="title">
