--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <button id="aboutus" onclick="AboutUs()">About Us</button>
         </div>
         <div id="PageJouer" style="display:none">
+            <div id="score-count">
+                <p>Score : <br><span id="score">0</span></p>
+            </div>
             <div id="clubs">
                 <h2>Clubs joués</h2>
             </div>       
