Styles for login

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <script src="config.js"></script>
     <title>Login</title>
+    <link rel="stylesheet" href="index.css">
+    <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 
 <body>
