--- a/play.html
+++ b/play.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="config.js"></script>
     <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="play.css">
     <script src="jquery.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Baloo+2' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Kalam' rel='stylesheet'>
