--- a/login.html
+++ b/login.html
@@ -4,17 +4,19 @@
 <head>
     <script src="config.js"></script>
     <title>Login</title>
+    <link rel="stylesheet" href="login.css">
+    <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 
 <body>
-    S'enregistrer
+    <p id="register">S'enregistrer</p>
     <form method="POST" id="login_action">
-        Email: <input type='text' name='email'>
-        Password: <input type='password' name='password'>
+        <p id="email">Email:</p><input type='text' name='email' id="email_box"><br>
+        <p id="password">Password:</p><input type='password' name='password' id="password_box"><br>
         <input type="submit" value="Je me connecte" id='trial'/>
     </form>
-    <form action="signup.html">
-        <input type="submit" value="Je me créé un compte">
+    <form action="signup.html" id="signup_action">
+        <input type="submit" value="Je me créé un compte" id="create">
     </form>
 </body>
 
