--- a/signup.html
+++ b/signup.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="config.js"></script>
     <title>Créer un compte</title>
     <link rel="stylesheet" href="signup.css">
