--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <form method="POST" id="first_action">
-        <input type="submit" value="Jouer à Sellaci"/>
+        <input type="submit" id="play" value="Jouer à Sellaci"/>
     </form>
 </body>
 
