Logout Margin Top

--- a/play.html
+++ b/play.html
@@ -30,7 +30,7 @@
         <div id="Homepage">           
             <button id="play" onclick="Go()">Play</button><br><br>
             <button id="rules" onclick="Rules()">Rules</button><br><br>
-            <button id="aboutus" onclick="AboutUs()">About Us</button>
+            <button id="aboutus" onclick="AboutUs()">About Us</button><br><br>
             <button id="logout" onclick="Logout()">Logout</button>
         </div>
         <div id="PageJouer" style="display:none">
