connect to new api

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </body>
 
 <script>
-    document.getElementById('first_action').action = URL_API + "/login"
+    document.getElementById('first_action').action = URL_API + "login"
 </script>
 
 </html>
