--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
     if (error_param) {
         document.getElementById('error_signup_message').textContent = error_param
     }
-    document.getElementById('signup_action').action = URL_API + "/signup"
+    document.getElementById('signup_action').action = URL_API + "signup"
 </script>    
 
 </html>
