--- a/login.html
+++ b/login.html
@@ -20,10 +20,14 @@
     <form action="signup.html" id="signup_action">
         <input type="submit" value="Je me créé un compte" id="create">
     </form>
+    <form action="reset_password.html" id="signup_action">
+        <input type="submit" value="Réinitialiser mon mot de passe" id="reset_password_action">
+    </form>
 </body>
 
 <script>
-    document.getElementById('login_action').action = URL_API + "/login"
+    console.log(URL_API + "login")
+    document.getElementById('login_action').action = URL_API + "login"
 </script>
 
 </html>
