--- a/login.html
+++ b/login.html
@@ -12,22 +12,56 @@
 
 <body>
     <p id="register">S'enregistrer</p>
-    <form method="POST" id="login_action">
-        <p id="email">Email:</p><input type='text' name='email' id="email_box"><br>
-        <p id="password">Password:</p><input type='password' name='password' id="password_box"><br>
-        <input type="submit" value="Je me connecte" id='trial'/>
-    </form>
+    <p id="email">Email:</p><input type='text' name='email' id="email_box"><br>
+    <p id="password">Password:</p><input type='password' name='password' id="password_box"><br>
+    <input type="submit" value="Je me connecte" id='trial' onclick="login()"/>
     <form action="signup.html" id="signup_action">
         <input type="submit" value="Je me créé un compte" id="create">
     </form>
-    <form action="reset_password.html" id="signup_action">
+    <form action="reset_password.html" id="reset_password">
         <input type="submit" value="Réinitialiser mon mot de passe" id="reset_password_action">
     </form>
 </body>
 
 <script>
-    console.log(URL_API + "login")
-    document.getElementById('login_action').action = URL_API + "login"
+
+    function login(){
+        data = {
+            "email": document.getElementById("email_box").value,
+            "password": document.getElementById("password_box").value,
+        }
+
+        console.log(data)
+
+        postData(URL_API + "login", data)
+            .then((login_success) => {
+                if(login_success['success']){
+                    console.log('LOGIN SUCCESS')
+                    window.location = "play.html";
+                }else{
+                    console.log('LOGIN FAIL')
+                }
+            }
+        );
+    }
+
+    // Example POST method implementation:
+    async function postData(url = '', data = {}) {
+        const response = await fetch(url, {
+            method: 'POST', 
+            mode: 'cors', 
+            cache: 'no-cache', 
+            credentials: 'same-origin', 
+            headers: {
+            'Content-Type': 'application/json'
+            },
+            redirect: 'follow', 
+            referrerPolicy: 'no-referrer',
+            body: JSON.stringify(data) 
+        });
+        return response.json();
+    }
+    
 </script>
 
 </html>
