--- a/reset_password.html
+++ b/reset_password.html
@@ -12,17 +12,46 @@
 
 <body>
     <p id="register">Mettre à jour mon mot de passe ? On t'envoie un email gros malin, regarde tes spams</p>
-    <form method="POST" action="login.html" id="reset_password_action">
-        <p id="reset_password_email">Email:</p><input type='text' name='email' id="reset_password_email_box"><br>
-        <input type="submit" value="Je réinitialise mon mot de passe" id="reset_password_generation">
-    </form>
+    <p id="reset_password_email">Email:</p><input type='text' name='email' id="reset_password_email_box"><br>
+    <input type="submit" value="Je réinitialise mon mot de passe" id="reset_password_generation", onclick="reset_password()">
     <a href="login.html">
         Retourne sur la page login
     </a>
 </body>
 
 <script>
-    document.getElementById('reset_password_action').action = URL_API + "reset_password"
+    function reset_password(){
+        data = {'email': document.getElementById('reset_password_email_box').value}
+        console.log(data)
+
+        postData(URL_API + "reset_password", data)
+            .then((login_success) => {
+                if(login_success['success']){
+                    console.log('RESET PASSWORD SUCCESS')
+                    window.location = "index.html";
+                }else{
+                    console.log('RESET PASSWORD FAIL')
+                }
+            }
+        );
+    }
+
+    // Example POST method implementation:
+    async function postData(url = '', data = {}) {
+        const response = await fetch(url, {
+            method: 'POST', 
+            mode: 'cors', 
+            cache: 'no-cache', 
+            credentials: 'same-origin', 
+            headers: {
+            'Content-Type': 'application/json'
+            },
+            redirect: 'follow', 
+            referrerPolicy: 'no-referrer',
+            body: JSON.stringify(data) 
+        });
+        return response.json();
+    }
 </script>
 
 </html>
