--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <input type="submit" id="play" value="Jouer à Sellaci" onclick="play()"/>
+    <img src="Ressources/Logo_fond_transparent.png" onclick="play()"/>
 </body>
 
 <script>
