--- a/reset_password.html
+++ b/reset_password.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="config.js"></script>
     <title>Reset Password</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="reset_password.css">
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 
@@ -15,7 +15,7 @@
     <p id="reset_password_email">Email:</p><input type='text' name='email' id="reset_password_email_box"><br>
     <input type="submit" value="Je réinitialise mon mot de passe" id="reset_password_generation", onclick="reset_password()">
     <a href="login.html">
-        Retourne sur la page login
+        <p id="back_to_login">Retourne sur la page login</p>
     </a>
 </body>
 
