--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body>
-    <img src="Ressources/Logo_fond_transparent.png" onclick="play()"/>
+    <img src="images/Logo_fond_transparent.png" onclick="log()"/>
 </body>
 
 <script>
-    function play(){
+    function log(){
         window.location = "login.html";
     }
 </script>
