--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
             .then((login_success) => {
                 if(login_success['success']){
                     console.log('LOGIN SUCCESS')
-                    window.location = "play.html";
+                    window.location = "menu.html";
                 }else{
                     console.log('LOGIN FAIL')
                 }
