--- a/menu.html
+++ b/menu.html
@@ -25,34 +25,31 @@
 <body>
     <div id="title">
         <div>
-            <img id ="Logo" src="Ressources/Logo_fond_transparent.png" onclick="BackToMenu()">
+            <img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()">
         </div>
         <div id="Homepage">           
-            <button id="play" onclick="Go()">Play</button><br><br>
-            <button id="rules" onclick="Rules()">Rules</button><br><br>
-            <button id="aboutus" onclick="AboutUs()">About Us</button><br><br>
-            <button id="logout" onclick="Logout()">Logout</button>
-        </div>
-        <div id="PageRegles" style="display:none">
-            <div id="Regles">
-                <h2>Comment jouer ?</h2>
-            </div>     
-            <div id="texteregles">
-                <p>Ce jeu est basé sur vos connaissances footballistiques actuelles.<br>Trois clubs se présentent à vous, vous devrez tout simplement deviner le joueur ayant joué pour ces trois clubs.<br>Attention, seuls les joueurs encore en activité comptent.<br>Une fois que vous pensez avoir trouvé le joueur, cliquez sur le bouton " <span style="font-style:italic; font-weight: bold; color: red;">Soumettre</span> "</p>
-            </div>
-            <button id="rules" onclick="BackToMenu()">Menu Principal</button>
-        </div>
-        <div id="PageAPropos" style="display:none">
-            <div id="APropos">
-                <h2>A propos de Sellaci</h2>
-            </div>     
-            <div id="texteapropos">
-                <p>Trois potes fans de foot jouaient à ce jeu sur la route de leur vacances pour passer le temps. La volonté était de partager aux plus fous de foot ce jeu original et qui vous fait travailler vos connaissances foot.<br>Pourquoi avoir choisi Sellaci comme nom ? A vous de le deviner...</p>
-            </div>
-            <button id="aboutus" onclick="BackToMenu()">Menu Principal</button>
+            <button id="play" onclick="play()" onclick="Go()">Play</button><br><br>
+            <button id="rules" onclick="rules()">Rules</button><br><br>
+            <button id="aboutus" onclick="aboutus()">About Us</button><br><br>
+            <button id="logout" onclick="logout()">Logout</button>
         </div>
     </div>
             
 </body>
+
+<script>
+    function play(){
+        window.location = "play.html";
+    }
+    function rules(){
+        window.location = "rules.html";
+    }
+    function aboutus(){
+        window.location = "aboutus.html";
+    }
+    function BackToMenu(){
+        window.location = "menu.html";
+    }
+</script>
 
 </html>
