--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-    <img src="images/Logo_fond_transparent.png" onclick="log()"/>
+    <div class="container">
+        <img class="image" src="images/Logo_fond_transparent.png"/>
+        <div class="text">
+            <label id="Log" onclick="log()">SE CONNECTER</label>
+        </div>
+    </div>
+    
 </body>
 
 <script>
