--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
 <body>
     <div id="title">
         <div>
-            <img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()">
+            <img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToIndex()">
         </div>
         <div id="Homepage">           
             <button id="play" onclick="play()" onclick="Go()">Play</button><br><br>
@@ -49,6 +49,9 @@
     }
     function BackToMenu(){
         window.location = "menu.html";
+    }
+    function BackToIndex(){
+        window.location = "index.html";
     }
 </script>
 
