--- a/reset_password.html
+++ b/reset_password.html
@@ -14,9 +14,9 @@
     <p id="register">Mettre à jour mon mot de passe ? On t'envoie un email gros malin, regarde tes spams</p>
     <p id="reset_password_email">Email:</p><input type='text' name='email' id="reset_password_email_box"><br>
     <input type="submit" value="Je réinitialise mon mot de passe" id="reset_password_generation", onclick="reset_password()">
-    <a href="login.html">
-        <p id="back_to_login">Retourne sur la page login</p>
-    </a>
+    <div>
+        <label id="log" onclick="backToLogin()">RETOURNER SUR LA PAGE LOGIN</label>
+    </div>
 </body>
 
 <script>
@@ -51,6 +51,9 @@
             body: JSON.stringify(data) 
         });
         return response.json();
+    }
+    function backToLogin(){
+        window.location = "login.html";
     }
 </script>
 
