--- a/rules.html
+++ b/rules.html
@@ -31,7 +31,7 @@
             <h2>Comment jouer ?</h2>
         </div>     
         <div id="texteregles">
-            <p>Ce jeu est basé sur vos connaissances footballistiques actuelles.<br>Trois clubs se présentent à vous, vous devrez tout simplement deviner le joueur ayant joué pour ces trois clubs.<br>Attention, seuls les joueurs encore en activité comptent.<br>Une fois que vous pensez avoir trouvé le joueur, cliquez sur le bouton " <span style="font-style:italic; font-weight: bold; color: red;">Soumettre</span> "</p>
+            <p>Ce jeu est basé sur vos connaissances footballistiques actuelles.<br>Trois clubs se présentent à vous, vous devrez tout simplement deviner le joueur ayant joué pour ces trois clubs.<br>Attention, seuls les joueurs encore en activité comptent.<br>Une fois que vous pensez avoir trouvé le joueur, cliquez sur le bouton <br><span style="font-style:italic; font-weight: bold; color: red;">Soumettre</span></p>
         </div>
         <button id="rules" onclick="BackToMenu()">Menu Principal</button>
     </div>
