--- a/login.html
+++ b/login.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    <p id="register">S'enregistrer</p>
-    <p id="email">Email:</p><input type='text' name='email' id="email_box"><br>
-    <p id="password">Password:</p><input type='password' name='password' id="password_box"><br>
-    <input type="submit" value="Je me connecte" id='trial' onclick="login()"/>
+    <p id="register">S'ENREGISTRER</p>
+    <input type='text' name='email' placeholder="Email" id="email_box"><br>
+    <input type='password' name='password' placeholder="Mot de passe" id="password_box"><br>
+    <input type="submit" value="Se connecter" id='trial' onclick="login()"/>
     <form action="signup.html" id="signup_action">
-        <input type="submit" value="Je me créé un compte" id="create">
+        <input type="submit" value="Créer un compte" id="create">
     </form>
     <form action="reset_password.html" id="reset_password">
-        <input type="submit" value="Réinitialiser mon mot de passe" id="reset_password_action">
+        <input type="submit" value="Mot de passe oublié ?" id="reset_password_action">
     </form>
 </body>
 
