--- a/aboutus.html
+++ b/aboutus.html
@@ -23,18 +23,18 @@
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 <body>
+    <div id="transition_page" class=" transition active"></div>
+    <header><img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()"></header>
     <div id="title">
-        <div>
-            <img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()">
-        </div>
         <div id="APropos">
             <h2>A propos de Sellaci</h2>
         </div>     
         <div id="texteapropos">
             <p>Trois potes fans de foot jouaient à ce jeu sur la route de leur vacances pour passer le temps. La volonté était de partager aux plus fous de foot ce jeu original et qui vous fait travailler vos connaissances foot.<br>Pourquoi avoir choisi Sellaci comme nom ? A vous de le deviner...</p>
         </div>
-        <button id="aboutus" onclick="BackToMenu()">Menu Principal</button>
+        <button id="back" onclick="BackToMenu()">Menu Principal</button>
     </div>
+    <footer></footer>
             
 </body>
 
