--- a/menu.html
+++ b/menu.html
@@ -23,15 +23,14 @@
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 <body>
-    <div id="title">
-        <header><img id ="logo" src="images/Logo_fond_transparent.png" onclick="BackToIndex()"></header>
-        <div id="Homepage">           
-            <button id="play" onclick="play()" onclick="Init()">Play</button><br><br>
-            <button id="rules" onclick="rules()">Rules</button><br><br>
-            <button id="aboutus" onclick="aboutus()">About Us</button><br><br>
-        </div>
-        <footer><img id="logout" src ="images/Logo_logout.png" onclick="logout()"></footer>
+    <div id="transition_page" class=" transition active"></div>
+    <header><img id ="logo" src="images/Logo_fond_transparent.png" onclick="BackToIndex()"></header>
+    <div id="Homepage">           
+            <button id="play" onclick="play()" onclick="Init()">Jouer</button><br><br>
+            <button id="rules" onclick="rules()">Règles</button><br><br>
+            <button id="aboutus" onclick="aboutus()">À propos de Sellaci</button><br><br>
     </div>
+    <footer><img id="logout" src ="images/Logo_logout.png" onclick="logout()"></footer>
             
 </body>
 
