--- a/play.html
+++ b/play.html
@@ -23,6 +23,7 @@
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 <body>
+    <div id="transition_page" class=" transition active"></div>
     <div id="title">
         <div>
             <img id ="logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()">
