--- a/reset_password.html
+++ b/reset_password.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
+    <div id="transition_page" class=" transition active"></div>
     <p id="register">Mettre à jour mon mot de passe ? On t'envoie un email gros malin, regarde tes spams</p>
-    <p id="reset_password_email">Email:</p><input type='text' name='email' id="reset_password_email_box"><br>
+    <input type='text' name='email' placeholder="Email" id="reset_password_email_box"><br>
     <input type="submit" value="Je réinitialise mon mot de passe" id="reset_password_generation", onclick="reset_password()">
     <div>
         <label id="log" onclick="backToLogin()">RETOURNER SUR LA PAGE LOGIN</label>
