--- a/rules.html
+++ b/rules.html
@@ -23,10 +23,9 @@
     <link href='https://fonts.googleapis.com/css?family=Barlow+Condensed' rel='stylesheet'>
 </head>
 <body>
+    <header><img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()"></header>
+    <div id="transition_page" class=" transition active"></div>
     <div id="title">
-        <div>
-            <img id ="Logo" src="images/Logo_fond_transparent.png" onclick="BackToMenu()">
-        </div>
         <div id="Regles">
             <h2>Comment jouer ?</h2>
         </div>     
@@ -35,7 +34,7 @@
         </div>
         <button id="rules" onclick="BackToMenu()">Menu Principal</button>
     </div>
-            
+    <footer></footer>            
 </body>
 
 <script>
