--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
+    <div id="transition_page" class=" transition active"></div>
     <div class="container">
         <img class="image" src="images/Logo_fond_transparent.png"/>
         <div class="text">
             <label id="Log" onclick="log()">SE CONNECTER</label>
         </div>
     </div>
-    
 </body>
 
 <script>
