--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="transition_page" class=" transition active"></div>
     <p id="register">S'ENREGISTRER</p>
     <input type='text' name='email' placeholder="Email" id="email_box"><br>
     <input type='password' name='password' placeholder="Mot de passe" id="password_box"><br>
