--- a/signup.html
+++ b/signup.html
@@ -11,9 +11,10 @@
 </head>
 
 <body>
+    <div id="transition_page" class=" transition active"></div>
     <p id="create">Créer un compte</p>
-    <p id="email">Email:</p><input type='text' name='email' id="email_box">
-    <p id="password">Password:</p><input type='password' name='password' id="password_box"><br>
+    <input type='text' name='email' placeholder="Email" id="email_box"><br>
+    <input type='password' name='password' placeholder="Mot de passe" id="password_box"><br>
     <input type="submit" value="Je m'inscris" id='trial' onclick="signup()"/>
     <div id='error_signup_message'></div>
     <form action="login.html">
