--- a/play.html
+++ b/play.html
@@ -38,7 +38,8 @@
             </div>
             <div id="clubs">
                 <h2>Clubs joués</h2>
-            </div>       
+            </div> 
+            <div id="clublevel"></div>       
             <div id="clublist"></div>   
             <div id="playername">
                 <div id="who">
